--- a/docker_files/docker-compose.yaml
+++ b/docker_files/docker-compose.yaml
@@ -5,11 +5,12 @@ web:
   hostname: 'gitlab.example.com'
   environment:
     GITLAB_OMNIBUS_CONFIG: |
-      external_url 'http://gitlab.example.com:8929'
-      gitlab_rails['gitlab_shell_ssh_port'] = 2224
+      external_url 'https://gitlab.example.com'
+      # Add any other gitlab.rb configuration here, each on its own line
   ports:
-    - '8929:8929'
-    - '2224:22'
+    - '80:80'
+    - '443:443'
+    - '22:22'
   volumes:
     - '$GITLAB_HOME/config:/etc/gitlab'
     - '$GITLAB_HOME/logs:/var/log/gitlab'
