--- a/project_files/dire-dire-docker/.gitignore
+++ b/project_files/dire-dire-docker/.gitignore
@@ -2,6 +2,7 @@
 ## are files involed with the Terraform project working directory.
 
 **/.terraform/*
+**/.terraform.*/*
 
 ## Terraform state files and their backups should not be included in the repo
 
